# fusioncore

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  fusioncore-100-deliverables-to-roscon.md  mkdocs.yml
.github/workflows/: docker.yml
benchmarks/: .gitignore  README.md
docs/: configuration.md  docker.md  how-it-works.md  index.md  troubleshooting.md  vs-robot-localization.md
docs/certified-configs/: bosch-bno085-ublox-f9p-outdoor.md  microstrain-3dm-gx3-45-segway.md
docs/reference/: benchmark.md  topics.md
fusioncore_core/: CMakeLists.txt  package.xml
fusioncore_core/include/fusioncore/: fusioncore.hpp
fusioncore_core/src/: fusioncore.cpp
fusioncore_core/tests/: test_gnss_coast.cpp
fusioncore_ros/: CMakeLists.txt  package.xml
fusioncore_ros/config/: fusioncore.yaml  vslam_imu.yaml
fusioncore_ros/src/: fusion_node.cpp
fusioncore_ros1/: CMakeLists.txt  package.xml
fusioncore_ros1/config/: yangpu_0706.yaml
fusioncore_ros1/launch/: fusioncore.launch  yangpu_0706.launch
fusioncore_ros1/src/: fusion_node.cpp
tools/: quick_test.sh
